test/fails/bad_casts/functions2.lgl
type a is float[2];
type b is float[2];

canon b f(a x, a y) { // Can't canonize things with more than 1 non-canonical argument
    return [1., 2.];
}

void main() {
    print 1;
}